work on events ui and integration

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,29 @@
+@import url("https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap");
+
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+* {
+  scrollbar-width: none;
+  scroll-behavior: smooth;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+html {
+  line-height: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@theme {
+  --color-neutral-100: #ffffff;
+  --color-neutral-200: #e8e8e8;
+  --color-neutral-300: #e8e8e8;
+  --color-neutral-400: #bbbbbb;
+  --color-neutral-500: #a4a4a4;
+  --color-neutral-900: #4a4a4a;
+  --color-neutral-1000: #333333;
+  --color-primary-500: #008aaa;
+  --color-primary-600: #00637a;
+  --color-primary-700: #003c4a;
+  --color-secondary-100: #fbedca;
+  --color-secondary-500: #d89d0f;
+  --font-font-general: var(--font-general);
+  --font-satoshi: var(--font-satoshi);
 }
